Refactor new API and add test specs

--- a/src/main/resources/githubRelease.mustache
+++ b/src/main/resources/githubRelease.mustache
@@ -1,3 +1,4 @@
+{{#versions}}
 {{^hasPreviousVersion}}
 * ![{{initialChange.category}}] {{initialChange.text}}
 {{/hasPreviousVersion}}
@@ -9,4 +10,5 @@
 {{^hasChangeList}}{{> logs}}
 {{/hasChangeList}}
 
+{{/versions}}
 {{> iconlist}}
