--- a/src/main/resources/logs.mustache
+++ b/src/main/resources/logs.mustache
@@ -1,3 +1,3 @@
 {{#logs}}
-* {{shortMessage}}
+* [`{{getAbbreviatedId}}`](https://github.com/{{repo.fullName}}/commit/{{id}}) {{shortMessage}}
 {{/logs}}
