--- a/src/main/resources/releaseNote.mustache
+++ b/src/main/resources/releaseNote.mustache
@@ -34,6 +34,15 @@
 * [{{name}}]({{browserDownloadUrl}})
 {{/releaseAssets}}
 {{/hasReleaseAssets}}
+{{#hasDependencies}}
+
+## Dependencies ##
+
+```bash
+{{#dependencies}}{{>dependency}}
+{{/dependencies}}
+```
+{{/hasDependencies}}
 
 ## How to install ##
 
